# device_maker_llm_scraper

./: .env.example  .gitignore  README.md  Run_Device_Collector.ipynb  combine_outputs.py  compact_enriched_output.py  enrich_from_device_specs.py  enrich_from_unique_apps.py  pyproject.toml  requirements-dev.txt  requirements-sagemaker.txt  requirements.txt  run_automation.py  sagemaker_run.sh  split_output.py  test_gemini_api.py
app/: __init__.py  batch_processor.py  config.py  device_filter.py  extractor.py  llm_client.py  logger.py  main.py  models.py  normalizer.py  prompts.py  retry_handler.py  scrape_pipeline.py  utils.py
app/gsmarena/: __init__.py  field_mapper.py  parser.py  scraper.py
data/cache/: gsmarena.db
data/input/: all_device_model.csv  devices.csv  devices.json  new_device_models.csv  new_devices_from_athena_2026-05-17_to_2026-05-20.csv  pending_device.csv
data/output/: sample_output.json
data/source/: Phone Specs.csv
tests/: test_models.py  test_normalizer.py  test_retry_handler.py  test_utils.py
